# Swin-11

./: .gitignore  BUILD_PLUGIN.md  CMakeLists.txt  README.md  metadata.json
contents/config/: main.xml
contents/ui/: ConfigGeneral.qml  Footer.qml  ItemGridDelegate.qml  ItemGridDelegateColumns.qml  ItemGridView.qml  ItemMultiGridView.qml  MenuRepresentation.qml  WeatherCard.qml  WeatherService.js  main.qml
contents/ui/code/: UpdateChecker.js  plugins.js
docs/superpowers/plans/: 2026-05-21-plugin-removal-weather-updates.md
docs/superpowers/specs/: 2026-05-21-plugin-removal-weather-updates-design.md
plugins/: README.md
src/: qmldir  weatherbridge.cpp  weatherbridge.h  weatherbridgeplugin.cpp  weatherbridgeplugin.h
translate/: de.po
